Resolves transform where scroll arrow shifts on first scroll down

--- a/src/styles/sections/hero.module.scss
+++ b/src/styles/sections/hero.module.scss
@@ -111,7 +111,7 @@
 	position:absolute;
 	display:flex;
 	align-items:center;
-	bottom:0;
+	bottom:60px;
 	left:50%;
 	transform: translateX(-50%);
 	z-index:10000;
